# issubclass

./: Makefile  README.md  issubclass.py  pyproject.toml
tests/: test_issubclass.py
