[tool.poetry]
name = "issubclass"
version = "0.1.1"
description = "issubclass() builtin that doesn't raise TypeError when arguments are not classes"
authors = ["Stanislav Zmiev <szmiev2000@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pyupgrade = "*"
black = "*"
autoflake = "*"
pytest = ">=7.2.1"
pytest-cov = ">=4.0.0"
isort = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
